# kalshi-event-study

./: .gitignore  LICENSE  METHODOLOGY.md  README.md  pyproject.toml  requirements.txt
analysis/: calibration.py  candle_pull.py  gridpoints.py  instrument_util.py  kalshi_rest.py  kalshi_ws.py  market_discovery.py  rehearsal_report.py  release_calendar.py  release_poller.py  replay.py  settled_pull.py  snapshot_probe.py  tape.py  ws_recorder.py
analysis/tests/: test_calendar.py  test_calibration.py  test_discovery_and_tape.py  test_gridpoints.py  test_parsing.py  test_poller.py  test_replay.py  test_ws_pure.py  test_ws_recorder.py
collector/: CMakeLists.txt  vcpkg.json
collector/src/: auth.cpp  auth.hpp  backoff.hpp  env.hpp  gap_detector.hpp  main.cpp  stamp.hpp  tape.cpp  tape.hpp
collector/tests/: test_core.cpp
